Jobb oldali elemek kialakítása

--- a/IrodalomProjekt/MainWindow.xaml
+++ b/IrodalomProjekt/MainWindow.xaml
@@ -19,16 +19,38 @@
             <Button DockPanel.Dock="Top"
                     Content="Betöltés"
                     Margin="5"
-                    Click="Betoltes_Click"/>
+                    Click="BetoltesClick"/>
             <Button DockPanel.Dock="Bottom"
                     Content="Kilépés"
                     Margin="5"
-                    Click="Button_Click"/>
+                    Click="KilepesClick"/>
             <Button DockPanel.Dock="Top"
                      Content="Kiértékelés"
                      Margin="5"
-                     Click="Button_Click_1"/>
+                     Click="KiertekelesClick"/>
             <TextBlock Text="Eredmény:" Background="Beige" x:Name="tbkEredmeny"/>
         </DockPanel>
+        <TextBlock Grid.Column="1"
+                   x:Name="tbkKerdesSzovege"/>
+        <StackPanel Grid.Column="1"
+                    Grid.Row="1">
+            <RadioButton GroupName="Valaszok"
+                                 Name="ValaszA"
+                                 Margin="3"
+                                 Content="A)"/>
+            <RadioButton GroupName="Valaszok"
+                         Name="ValaszB"
+                         Margin="3"
+                         Content="B)"/>
+            <RadioButton GroupName="Valaszok"
+                         Name="ValaszC"
+                         Margin="3"
+                         Content="C)"/>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Button Content="Előző" Margin="5" Padding="5" Width="100" Click="ElozoClick"/>
+                <Button Content="Válasz mentése" Margin="5" Padding="5" Width="100" Click="ValaszMenteseClick"/>
+                <Button Content="Következő" Margin="5" Padding="5"Width="100" Click="KovetkezoClick"/>
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Window>
